--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup Form</title>
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Import Fonts from Google-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Skranji:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="wrapper">
         <div class="img-area">
             <div class="logo-box">
-                <h2>Start Tracking</h2>
+                <h2>EZFit</h2>
                 <img src="./img/app-logo.png" alt="weights logo">
             </div>
             <p class="credit">Photo by <a
@@ -29,15 +34,15 @@
                 <div class="fields">
                     <div class="input-box">
                         <label for="first-name">First Name</label>
-                        <input id="first-name" type="text">
+                        <input id="first-name" type="text" required>
                     </div>
                     <div class="input-box">
                         <label for="last-name">Last Name</label>
-                        <input id="last-name" type="text">
+                        <input id="last-name" type="text" required>
                     </div>
                     <div class="input-box">
                         <label for="email">Email</label>
-                        <input id="email" type="email">
+                        <input id="email" type="email" required>
                     </div>
                     <div class="input-box">
                         <label for="phone-number">Phone Number</label>
@@ -45,11 +50,11 @@
                     </div>
                     <div class="input-box">
                         <label for="password1">Password</label>
-                        <input type="text" minlength="8">
+                        <input type="password" minlength="8" required>
                     </div>
                     <div class="input-box">
                         <label for="password2">Confirm Password</label>
-                        <input type="text" minlength="8">
+                        <input type="password" minlength="8" required>
                     </div>
                 </div>
                 <button class="btn" id="signup-btn" type="submit">Create Account</button>
